--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   go_router: ^13.2.0
   js: ^0.7.1
-
+  sqflite: ^2.3.2
+  path: ^1.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
